// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`clear block formatting 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "backgroundColor": "red",
            "id": "ref1",
            "textColor": "default",
          },
          "type": "blockContainer",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 1,
      "slice": {
        "content": [
          {
            "attrs": {
              "backgroundColor": "default",
              "id": "ref1",
              "textColor": "default",
            },
            "type": "blockContainer",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 2,
    },
  },
]
`;

exports[`clear block formatting 2`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "right",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 18,
      "slice": {
        "content": [
          {
            "attrs": {
              "textAlignment": "left",
            },
            "type": "paragraph",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 19,
    },
  },
]
`;

exports[`drop mark and link 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Bold text. ",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 84,
      "slice": {
        "content": [
          {
            "text": "Bold text. ",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 95,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.google.com",
                "rel": "noopener noreferrer nofollow",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link.",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 95,
      "slice": {
        "content": [
          {
            "text": "Link.",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 100,
    },
  },
]
`;

exports[`drop mark and link and change text within mark 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "Hello",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 70,
      "slice": {
        "content": [
          {
            "text": "Hi",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 75,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Bold",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 84,
      "slice": {
        "content": [
          {
            "text": "Bold",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 88,
    },
  },
  {
    "replaced": null,
    "step": {
      "from": 88,
      "slice": {
        "content": [
          {
            "text": " the",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 88,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": " text. ",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 88,
      "slice": {
        "content": [
          {
            "text": " text. ",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 95,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.google.com",
                "rel": "noopener noreferrer nofollow",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link.",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 95,
      "slice": {
        "content": [
          {
            "text": "Link.",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 100,
    },
  },
]
`;

exports[`modify nested content 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "Apples",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 21,
      "slice": {
        "content": [
          {
            "text": "APPLES",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 27,
    },
  },
]
`;

exports[`modify parent content 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "need to buy",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 5,
      "slice": {
        "content": [
          {
            "text": "NEED TO BUY",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 16,
    },
  },
]
`;

exports[`plain source block, add mention 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "world",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 10,
      "slice": {
        "content": [
          {
            "attrs": {
              "user": "Jane Doe",
            },
            "type": "mention",
          },
        ],
      },
      "stepType": "replace",
      "to": 15,
    },
  },
]
`;

exports[`remove column 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "backgroundColor": "default",
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
            "textAlignment": "left",
            "textColor": "default",
          },
          "content": [
            {
              "content": [
                {
                  "text": "Table Cell 2",
                  "type": "text",
                },
              ],
              "type": "tableParagraph",
            },
          ],
          "type": "tableCell",
        },
      ],
    },
    "step": {
      "from": 20,
      "stepType": "replace",
      "to": 36,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "backgroundColor": "default",
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
            "textAlignment": "left",
            "textColor": "default",
          },
          "content": [
            {
              "content": [
                {
                  "marks": [
                    {
                      "type": "bold",
                    },
                  ],
                  "text": "Table Cell Bold 5",
                  "type": "text",
                },
              ],
              "type": "tableParagraph",
            },
          ],
          "type": "tableCell",
        },
      ],
    },
    "step": {
      "from": 70,
      "stepType": "replace",
      "to": 91,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "backgroundColor": "default",
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
            "textAlignment": "left",
            "textColor": "default",
          },
          "content": [
            {
              "content": [
                {
                  "text": "Table Cell 8",
                  "type": "text",
                },
              ],
              "type": "tableParagraph",
            },
          ],
          "type": "tableCell",
        },
      ],
    },
    "step": {
      "from": 125,
      "stepType": "replace",
      "to": 141,
    },
  },
]
`;

exports[`remove last column 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 3",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "openStart": 1,
    },
    "step": {
      "from": 36,
      "slice": {
        "content": [
          {
            "type": "tableRow",
          },
        ],
        "openStart": 1,
      },
      "stepType": "replace",
      "to": 53,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 6",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "openStart": 1,
    },
    "step": {
      "from": 91,
      "slice": {
        "content": [
          {
            "type": "tableRow",
          },
        ],
        "openStart": 1,
      },
      "stepType": "replace",
      "to": 108,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "backgroundColor": "default",
            "colspan": 1,
            "colwidth": null,
            "rowspan": 1,
            "textAlignment": "left",
            "textColor": "default",
          },
          "content": [
            {
              "content": [
                {
                  "text": "Table Cell 9",
                  "type": "text",
                },
              ],
              "type": "tableParagraph",
            },
          ],
          "type": "tableCell",
        },
      ],
    },
    "step": {
      "from": 141,
      "stepType": "replace",
      "to": 157,
    },
  },
]
`;

exports[`remove last row 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 7",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 8",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 9",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
    },
    "step": {
      "from": 108,
      "stepType": "replace",
      "to": 158,
    },
  },
]
`;

exports[`remove row 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 4",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "marks": [
                        {
                          "type": "bold",
                        },
                      ],
                      "text": "Table Cell Bold 5",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "backgroundColor": "default",
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "textAlignment": "left",
                "textColor": "default",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Table Cell 6",
                      "type": "text",
                    },
                  ],
                  "type": "tableParagraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "type": "tableRow",
        },
      ],
      "openEnd": 1,
      "openStart": 1,
    },
    "step": {
      "from": 54,
      "stepType": "replace",
      "to": 109,
    },
  },
]
`;

exports[`standard update 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "e",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 4,
      "slice": {
        "content": [
          {
            "text": "a",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 5,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "text": "world",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 10,
      "slice": {
        "content": [
          {
            "text": "Welt",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 15,
    },
  },
]
`;

exports[`styles + ic in source block, remove mark 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "are you doing? ",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 34,
      "slice": {
        "content": [
          {
            "text": "are you doing? ",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 49,
    },
  },
]
`;

exports[`styles + ic in source block, remove mention 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": ", ",
          "type": "text",
        },
        {
          "attrs": {
            "user": "John Doe",
          },
          "type": "mention",
        },
      ],
    },
    "step": {
      "from": 25,
      "stepType": "replace",
      "to": 28,
    },
  },
]
`;

exports[`styles + ic in source block, replace content 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "user": "John Doe",
          },
          "type": "mention",
        },
        {
          "text": "! How ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "are you doing? ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "blue",
              },
              "type": "textColor",
            },
          ],
          "text": "I'm feeling blue!",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 27,
      "slice": {
        "content": [
          {
            "text": "updated content",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 66,
    },
  },
]
`;

exports[`styles + ic in source block, update mention prop 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "user": "John Doe",
          },
          "type": "mention",
        },
      ],
    },
    "step": {
      "from": 27,
      "slice": {
        "content": [
          {
            "attrs": {
              "user": "Jane Doe",
            },
            "type": "mention",
          },
        ],
      },
      "stepType": "replace",
      "to": 28,
    },
  },
]
`;

exports[`styles + ic in source block, update text 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "e",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 21,
      "slice": {
        "content": [
          {
            "text": "a",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 22,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "text": "How ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "are you doing? ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "blue",
              },
              "type": "textColor",
            },
          ],
          "text": "I'm feeling blue",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 30,
      "slice": {
        "content": [
          {
            "text": "Wie ",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "bold",
              },
            ],
            "text": "geht es dir? ",
            "type": "text",
          },
          {
            "marks": [
              {
                "attrs": {
                  "stringValue": "blue",
                },
                "type": "textColor",
              },
            ],
            "text": "Ich fühle mich blau",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 65,
    },
  },
]
`;

exports[`styles + ic in target block, add mark (paragraph) 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "Hello, world!",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 3,
      "slice": {
        "content": [
          {
            "marks": [
              {
                "type": "bold",
              },
            ],
            "text": "Hello, world!",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 16,
    },
  },
]
`;

exports[`styles + ic in target block, add mark (word) 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "world!",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 10,
      "slice": {
        "content": [
          {
            "marks": [
              {
                "type": "bold",
              },
            ],
            "text": "world!",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 16,
    },
  },
]
`;

exports[`translate selection 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "e",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 21,
      "slice": {
        "content": [
          {
            "text": "a",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 22,
    },
  },
]
`;

exports[`turn paragraphs into list 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "left",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 20,
      "slice": {
        "content": [
          {
            "attrs": {
              "textAlignment": "left",
            },
            "type": "bulletListItem",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 21,
    },
  },
]
`;

exports[`turn paragraphs into list 2`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "left",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 30,
      "slice": {
        "content": [
          {
            "attrs": {
              "textAlignment": "left",
            },
            "type": "bulletListItem",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 31,
    },
  },
]
`;

exports[`update block prop 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "left",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 2,
      "slice": {
        "content": [
          {
            "attrs": {
              "textAlignment": "right",
            },
            "type": "paragraph",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 3,
    },
  },
]
`;

exports[`update block prop and content 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "left",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 2,
      "slice": {
        "content": [
          {
            "attrs": {
              "textAlignment": "right",
            },
            "type": "paragraph",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 3,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "text": "Hello",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 3,
      "slice": {
        "content": [
          {
            "text": "What's up",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 8,
    },
  },
]
`;

exports[`update block type 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "left",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 2,
      "slice": {
        "content": [
          {
            "attrs": {
              "level": 1,
              "textAlignment": "left",
            },
            "type": "heading",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 3,
    },
  },
]
`;

exports[`update block type and content 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "attrs": {
            "textAlignment": "left",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "step": {
      "from": 2,
      "slice": {
        "content": [
          {
            "attrs": {
              "level": 1,
              "textAlignment": "left",
            },
            "type": "heading",
          },
        ],
        "openEnd": 1,
      },
      "stepType": "replace",
      "structure": true,
      "to": 3,
    },
  },
  {
    "replaced": {
      "content": [
        {
          "text": "Hello",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 3,
      "slice": {
        "content": [
          {
            "text": "What's up",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 8,
    },
  },
]
`;

exports[`update table cell 1`] = `
[
  {
    "replaced": {
      "content": [
        {
          "text": "Table Cell 1",
          "type": "text",
        },
      ],
    },
    "step": {
      "from": 6,
      "slice": {
        "content": [
          {
            "text": "Hello, world!",
            "type": "text",
          },
        ],
      },
      "stepType": "replace",
      "to": 18,
    },
  },
]
`;
